--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-django==3.2.16
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+Django==4.2.14
+django-bootstrap5==24.2
+Pillow==9.3.0
+pytz==2024.1
+soupsieve==2.5
+sqlparse==0.5.1
+typing_extensions==4.12.2
+tzdata==2024.1
